# recommendify

./: .gitignore  .travis.yml  CMakeLists.txt  Gemfile  LICENSE  README.md  Rakefile  dump.rdb  itemrecommender.h  recommendify.gemspec  test.rb
doc/: example.rb  example_data.csv
example/movielens_minhash/: movielens_minhash.cc
ext/: .gitignore  Doxyfile  cc_item.h  cosine.c  cosine.h  extconf.rb  jaccard.c  output.c  recommendify.c  sort.c  sort.h
lib/: recommendify.rb
lib/recommendify/: base.rb  cc_matrix.rb  cosine_input_matrix.rb  input_matrix.rb  jaccard_input_matrix.rb  jaccard_matrix.rb  jaccard_processor.rb  neighbor.rb  processor.rb  recommendify.rb  similarity_matrix.rb  sparse_matrix.rb
spec/: base_spec.rb  cc_matrix_shared.rb  cosine_input_matrix_spec.rb  input_matrix_shared.rb  input_matrix_spec.rb  jaccard_input_matrix_spec.rb  jaccard_matrix_spec.rb  jaccard_processor_spec.rb  recommendify_spec.rb  similarity_matrix_spec.rb  sparse_matrix_spec.rb  spec_helper.rb
src/: .gitignore  Makefile  cc_item.h  cosine.c  cosine.h  iikey.c  iikey.h  jaccard.c  jaccard.h  output.c  output.h  recommendify.c  recommendify.cpp  sort.c  sort.h  version.h
src/recommendify/: fingerprint.h  itemrecommender.h  itemset.h  lsh.h  memorybackend.cc  memorybackend.h  minhash.cc  minhash.h  minhash_test.cc  minhashrecommender.cc  minhashrecommender.h  rankeditemlist.cc  rankeditemlist.h  userrecommender.h
